--- a/src/styles.css
+++ b/src/styles.css
@@ -8,12 +8,12 @@ body {
   background: #343a40;
 }
 
-footer{
+/* footer{
   position:absolute;
   bottom: 0;
   right: 0;
   left: 0;
-}
+} */
 
 .signout-css{
   cursor: pointer;
